--- a/index.html
+++ b/index.html
@@ -1,2 +1,5 @@
+MyAimSteward
+MyAngelSteward
+StewardMyDaddy
 
 <img src="https://media.discordapp.net/attachments/871727059586674690/871727220899577956/IMG_20210802_102323.jpg">
