--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
-MyAimSteward
-MyAngelSteward
-StewardMyDaddy
+<h1> MyAimSteward </h1>
+<h1> MyAngelSteward </h1>
+<h1> StewardMyDaddy </h1>
 
 <img src="https://media.discordapp.net/attachments/871727059586674690/871727220899577956/IMG_20210802_102323.jpg">
