--- a/index.html
+++ b/index.html
@@ -1,5 +1,25 @@
-<h1> MyAimSteward </h1>
-<h1> MyAngelSteward </h1>
-<h1> StewardMyDaddy </h1>
+<html>
+  
+  
+  
+<head> 
 
-<img src="https://media.discordapp.net/attachments/871727059586674690/871727220899577956/IMG_20210802_102323.jpg">
+  <title>Steward</title>
+  <link rel="shortcut icon" type="image/png" href="https://cdn.discordapp.com/emojis/871730187950243912.png"/>
+  
+  
+  </head> 
+  
+  
+  
+
+<body>
+    <h1> MyAimSteward </h1>
+    <h1> MyAngelSteward </h1>
+    <h1> StewardMyDaddy </h1>
+
+     <img src="https://media.discordapp.net/attachments/871727059586674690/871727220899577956/IMG_20210802_102323.jpg">
+  
+  </body>
+  
+</html
