--- a/index.html
+++ b/index.html
@@ -14,6 +14,7 @@
   
 
 <body>
+  <h1> join us https://discord.gg/m77maASfUM </h1>
     <h1> MyAimSteward </h1>
     <h1> MyAngelSteward </h1>
     <h1> StewardMyDaddy </h1>
