--- a/index.html
+++ b/index.html
@@ -9,15 +9,16 @@
   
   
   </head> 
+  <style>
+h1 {text-align: center;}
   
-  
+    
+  </style>
   
 
 <body>
   <h1> join us https://discord.gg/m77maASfUM </h1>
-    <h1> MyAimSteward </h1>
-    <h1> MyAngelSteward </h1>
-    <h1> StewardMyDaddy </h1>
+
 
      <img src="https://media.discordapp.net/attachments/871727059586674690/871727220899577956/IMG_20210802_102323.jpg">
   
