--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
 h1{
     font-family: 'Exo 2', sans-serif;
     text-align: center;
-    text-shadow: 0px 0px #ffffff;
+    text-shadow: rgb(200, 200, 200) 0px 0px 20px;
     color: #ffffff;
     }
     
@@ -27,7 +27,7 @@ h1{
 
 <body>
   <h1> join us https://discord.gg/m77maASfUM </h1>
-  <body style="background-color:grey;">
+  <body style="background-color:black;">
 
      <img src="https://media.discordapp.net/attachments/871727059586674690/871727220899577956/IMG_20210802_102323.jpg">
   
