--- a/index.html
+++ b/index.html
@@ -29,7 +29,12 @@ h1{
   width: 50%;
 }    
     
+.resize {
+    width: 400px;
+    height: auto;
+}
     
+   
   </style>
   
 
@@ -37,7 +42,7 @@ h1{
   <h1> join us https://discord.gg/m77maASfUM </h1>
   <body style="background-color:black;">
 
-     <img src="https://media.discordapp.net/attachments/871727059586674690/871727220899577956/IMG_20210802_102323.jpg" alt="Steward" class="center">
+     <img src="https://media.discordapp.net/attachments/871727059586674690/871727220899577956/IMG_20210802_102323.jpg" alt="Steward" class="center" class="resize">
   
   </body>
   
