--- a/index.html
+++ b/index.html
@@ -33,7 +33,10 @@ h1{
     width: 400px;
     height: auto;
 }
-    
+        
+.lmaoshadow {
+    box-shadow: rgb(200, 200, 200) 0px 0px 30px;
+}
    
   </style>
   
@@ -43,7 +46,7 @@ h1{
   <body style="background-color:black;">
     <h1> </h1>
     <h1> </h1>
-     <img src="https://media.discordapp.net/attachments/871727059586674690/871727220899577956/IMG_20210802_102323.jpg" alt="Steward" class="center resize">
+     <img src="https://media.discordapp.net/attachments/871727059586674690/871727220899577956/IMG_20210802_102323.jpg" alt="Steward" class="center resize lmaoshadow">
   
   </body>
   
