--- a/index.html
+++ b/index.html
@@ -42,7 +42,7 @@ h1{
   
 
 <body>
-  <h1> join us https://discord.gg/m77maASfUM </h1>
+  <h1> join us href="https://discord.gg/m77maASfUM" </h1>
   <body style="background-color:black;">
     <h1> </h1>
     <h1> </h1>
