--- a/index.html
+++ b/index.html
@@ -21,6 +21,12 @@ h1{
     text-shadow: rgba(200, 200, 200, 1) 0px 0px 30px;
     color: #ffffff;
     }
+
+.ciota{
+       font-family: 'Exo 2', sans-serif;
+       text-align: center;
+       text-shadow: rgba(200, 200, 200, 1) 0px 0px 30px;
+    }    
     
 .center {
   display: block;
@@ -42,12 +48,12 @@ h1{
   
 
 <body>
-  <h1> join us <href="https://discord.gg/m77maASfUM"> </h1>
+  <h1> join us </h1>
   <body style="background-color:black;">
     <h1> </h1>
     <h1> </h1>
      <img src="https://media.discordapp.net/attachments/871727059586674690/871727220899577956/IMG_20210802_102323.jpg" alt="Steward" class="center resize lmaoshadow">
-  
+      <a href="https://discord.gg/m77maASfUM"> class="ciota" </a> 
   </body>
   
 </html
