--- a/index.html
+++ b/index.html
@@ -25,7 +25,9 @@ h1{
 .ciota{
        font-family: 'Exo 2', sans-serif;
        text-align: center;
+       margin: 0 auto;
        text-shadow: rgba(200, 200, 200, 1) 0px 0px 30px;
+       color: #ffffff;
     }    
     
 .center {
