--- a/index.html
+++ b/index.html
@@ -15,20 +15,21 @@
   </head> 
   <style>
     
-h1{
+h1 {
     font-family: 'Exo 2', sans-serif;
     text-align: center;
     text-shadow: rgba(200, 200, 200, 1) 0px 0px 30px;
     color: #ffffff;
+    letter-spacing: 0.068em;
     }
 
 .ciota {
        font-family: 'Exo 2', sans-serif;
-       text-align: center;
        margin: 0 auto;
        text-shadow: rgba(200, 200, 200, 1) 0px 0px 30px;
        color: #ffffff;
        text-decoration: none;
+       letter-spacing: 0.068em;
     }    
     
 .center {
