--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@ h1 {
     letter-spacing: 0.068em;
     }
 
-.ciota {
+a {
        font-family: 'Exo 2', sans-serif;
        margin: 0 auto;
        text-shadow: rgba(200, 200, 200, 1) 0px 0px 30px;
@@ -57,7 +57,7 @@ h1 {
     <h1> </h1>
     <h1> </h1>
      <img src="https://media.discordapp.net/attachments/871727059586674690/871727220899577956/IMG_20210802_102323.jpg" alt="Steward" class="center resize lmaoshadow">
-      <a href="https://discord.gg/m77maASfUM" class="ciota">Click Here to Join us</a>
+      <a href="https://discord.gg/m77maASfUM">Click Here to Join us</a>
   </body>
   
 </html
