--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@ h1 {
 
 a {
        font-family: 'Exo 2', sans-serif;
-       margin: 0 auto;
+       text-align:center;display:block;
        text-shadow: rgba(200, 200, 200, 1) 0px 0px 30px;
        color: #ffffff;
        text-decoration: none;
