--- a/index.html
+++ b/index.html
@@ -20,6 +20,7 @@ h1 {
     text-align: center;
     text-shadow: rgba(200, 200, 200, 1) 0px 0px 30px;
     color: #ffffff;
+    transition: transform .2s; 
     letter-spacing: 0.068em;
     }
     
