--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@ h1 {
     }
     
 h1:hover {
-text-shadow: rgba(255 0 0, 1) 0px 0px 30px;  
+text-shadow: 0px 0px 30px rgba(255, 0, 0); 
 color: red;
 transform: scale(1.5);
 cursor: pointer
