--- a/index.html
+++ b/index.html
@@ -22,6 +22,7 @@ h1 {
     color: #ffffff;
     transition: transform .2s; 
     letter-spacing: 0.068em;
+    display: inline
     }
     
 h1:hover {
