--- a/index.html
+++ b/index.html
@@ -22,7 +22,8 @@ h1 {
     color: #ffffff;
     transition: transform .2s; 
     letter-spacing: 0.068em;
-    display: inline
+    display: flex
+    justify-content: center
     }
     
 h1:hover {
