--- a/index.html
+++ b/index.html
@@ -22,8 +22,8 @@ h1 {
     color: #ffffff;
     transition: transform .2s; 
     letter-spacing: 0.068em;
-    display: flex
-    justify-content: center
+    display: flex;
+    justify-content: center;
     }
     
 h1:hover {
