--- a/index.html
+++ b/index.html
@@ -24,6 +24,7 @@ h1 {
     letter-spacing: 0.068em;
     display: inline-block;
     margin: 0 auto;
+    justify-content: center;
     }
     
 h1:hover {
