--- a/index.html
+++ b/index.html
@@ -66,7 +66,7 @@ a {
   
 
 <body>
-  <h1><a href="https://discord.gg/m77maASfUM">Join us</a></h1>
+  <h1><a href="https://discord.gg/m77maASfUM" style="font-size: 58px;">Join us</a></h1>
   <body style="background-color:black;">
   
      <img src="https://media.discordapp.net/attachments/871727059586674690/871727220899577956/IMG_20210802_102323.jpg" alt="Steward" class="center resize lmaoshadow">
