--- a/index.html
+++ b/index.html
@@ -25,6 +25,7 @@ h1 {
     display: inline-block;
     margin: 0 auto;
     justify-content: center;
+    align-items: center;
     }
     
 h1:hover {
