--- a/index.html
+++ b/index.html
@@ -26,6 +26,7 @@ h1 {
     margin: 0 auto;
     justify-content: center;
     align-items: center;
+    transition: color 2s;
     }
     
 h1:hover {
