--- a/index.html
+++ b/index.html
@@ -20,13 +20,13 @@ h1 {
     text-align: center;
     text-shadow: rgba(200, 200, 200, 1) 0px 0px 30px;
     color: #ffffff;
-    transition: transform .2s; 
+    transition: transform 2s, color 2s; 
     letter-spacing: 0.068em;
     display: inline-block;
     margin: 0 auto;
     justify-content: center;
     align-items: center;
-    transition: color 2s;
+    
     }
     
 h1:hover {
